Release version v2.11.0
  - release: cut off new release 2.11.0
  - internal: Update change log for v2.11.0 release
  - internal: Upgrade rules_pkg 0.5.1 -> 1.0.1
  - internal: Set thread pools in domain processing
  - internal: Coordinator patch to update rules_boost with mi...
  - internal: Remove WorkerJobCompletion metric from AgS
  - [INFRA] [AUTO] Update container dependencies.
  - [INFRA] [AUTO] Update container dependencies.
  - doc: Point to details about output domain in api.md.
  - [feat] Added support for new optional parameter "input_da...
  (And 3 more changes)

GitOrigin-RevId: c0a2796bd1085d57ea2d0b6302cfef0451de5f9a